# aws-greengrass-testing

./: .gitignore  README.md  RELEASE_NOTES.md  conftest.py  flake.nix  fleet_provisioning_tpm.sh  generate_tpm_key.sh  greengrassTestSuite.py  pom.xml.versionsBackup  pyproject.toml  requirements.txt  run-container-tests.sh  run-tests.sh  test1.py
.github/: PULL_REQUEST_TEMPLATE.md  ci.yml
.github/ISSUE_TEMPLATE/: bug.md  feature-request.md
.github/scripts/: binaryCompatibility.py  cover2cover.py
.github/workflows/: ci.yml
HelloWorld/1.0.0/artifacts/: hello_world.py
HelloWorld/1.0.0/recipe/: HelloWorld-1.0.0.yaml
MultiPlatform/1.0.0/artifacts/: hello_world.py
MultiPlatform/1.0.0/recipe/: MultiPlatform-1.0.0.yaml
SampleComponent/1.0.0/recipe/: SampleComponent-1.0.0.yaml
components/aws.greengrass.NucleusLite/recipe/: aws.greengrass.NucleusLite.yaml
config/: __init__.py  config.py
ggtest/corruptFiles/: hello_world.py
misc/: dictionary.txt  recipe_template.yaml
nix/: devShell.nix  formatters.nix
src/: GGLSetup.py  GGTestUtils.py  IoTUtils.py  SystemInterface.py  aws-greengrass-testing-component.py  aws-greengrass-testing-config-subscription.py  aws-greengrass-testing-deployment.py  aws-greengrass-testing-fleet-status.py  aws-greengrass-testing-hsm.py  aws-greengrass-testing-runtime.py  aws-greengrass-testing-security.py  aws-greengrass-testing-system-log-forwarder.py  aws-greengrasstesting-runtime.py  ggl-setup.py  iot-setup.py
tools/cloud_deployment_cleanup/: README.md  cloud_deployment_cleanup.sh
(+76 files in other folders)
