[project]
name = "aws-greengrass-testing"
version = "0.1.0"
description = ""
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.4",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "types-boto3[essential,greengrassv2,iot,iot-data]>=1.38.4",
]

[dependency-groups]
dev = [
    "pyls-memestra>=0.0.16",
    "pylsp-mypy>=0.7.0",
    "pylsp-rope>=0.1.17",
    "python-lsp-isort>=0.2.0",
    "python-lsp-server[mccabe,pycodestyle,pyflakes,rope,yapf]>=1.12.2",
]

[tool.pytest.ini_options]
testpaths = [
    "./src/*",
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true
column_limit = 80
